* App now watches the gnome toolbar style and changes accordingly.
* Tooltips and toolbar styles have started working, looks like something got fixed in libglade.
* Tidy up the progress dialog code, improve performance and hopefully fix some xlib multithreading issues.
* Make the preferences dialog more gnomeesque with (almost) instant apply preferences.

Version 0.2

* Fix data cd size calculation problems.
* Fix assert on app start from gtk_tree_store_remove call.
* Preferences are now stored using gconf under apps/GnomeBaker.
* Enable cancel before starting burning/ripping/building iso.
* Add burnfree option to the burn process.
* Add new icon set from Miroslav Strugarevic.
* Stop using G_LOG_LEVEL_ERROR as it aborts the app.
* Scan the SCSI, ATAPI AND ATA interfaces for devices.
* Check the mime type is "application/x-cd-image" when burning an existing iso.
* Make the app smaller as per Eugenias suggestion so it fits an 800x600 desktop.
* Clean out the temp dir on exit (add option to preferences dialog).
* Add horizontal pane to browser windows.
* Modify iso dialog to show intent as to bootable cd support (not implemented yet).
* Attempt at fixing BSD problems by using g_spawn code.
* Upgrade logging to provide full navigation output to the console (temporary until final release).
* Patch from Isak Savo to allow showing/hiding of hidden files (option on prefs dlg).
* Fix small memory leak in the file browser.
* Fix memory leak in the exec layer and refactor/tidy most of the exec code.
* Progress bar now takes account of all of the operations rather than going to 100% for each.
* Better support for Nautilus drag and dropping, we now handle %20 as spaces.
* Killer new splash from gamehack.
* Option to create an iso only and not burn when copying or creating a data cd.
* Make 700MB and 80min the default cd sizes.
* Fix potential memory leak when adding files to cds with the toolbar buttons.
* Only enable the create cd buttons if the cd has content.